# pilot

./: .gitignore  Makefile.am  config.json  configure.ac  flyer.c  flyer2.c  pi_camera.c  pi_transform.c  pilot.c  pilot.h
t/: .gitignore  Makefile.am  camera.c  transform.c
t/data/: parser.json
web/: index.html
web/css/: style.css
web/js/: pilot.js  transform.js
web/test/: index.html
web/test/t/: transform.js
